fixtures/corpus/invalid/req-missing-signature.rune
[REQ] this is not a valid signature

[DTO] FooDto: a
    a contract
